# ffmpepy_video_player

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zx/androidffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/common/: CommonTools.h  Thread.cpp  thread.h
app/src/main/cpp/common/egl_core/: egl_core.cpp  egl_core.h  egl_share_context.cpp  egl_shared_context.cpp  egl_shared_context.h  gl_tools.h
app/src/main/cpp/common/message_queue/: Message_queue.cpp  Message_queue.h  handle.h  handler.cpp
app/src/main/cpp/common/opengl_media/: Movie_frame.cpp  movie_frame.h
app/src/main/cpp/common/opengl_media/texture/: YUVTextureFrame.cpp  YUVTextureFrame.h  gpu_texture_frame.cpp  gpu_texture_frame.h  texture_frame.cpp  texture_frame.h
app/src/main/cpp/common/opengl_media/texture_copier/: gpu_texture_frame_copier.cpp  gpu_texture_frame_copier.h  texture_frame_copier.cpp  texture_frame_copier.h  yuv_texture_frame_copier.cpp  yuv_texture_frame_copier.h
app/src/main/cpp/common/opensl_media/: opensl_es_context.cpp  opensl_es_context.h
app/src/main/cpp/common/soundtouch/: SoundTouchWrapper.cpp  SoundTouchWrapper.h
app/src/main/cpp/video_player/: audio_output.cpp  video_output.h  video_player_controller.cpp  video_player_controller.h
app/src/main/cpp/video_player/common/: circle_texture_queue.cpp  circle_texture_queue.h
app/src/main/cpp/video_player/decoder/: decoder_request_header.cpp  ffmpeg_video_decoder.cpp  ffmpeg_video_decoder.h  video_decoder.cpp  video_decoder.h
app/src/main/cpp/video_player/sync/: av_synchronizer.cpp  av_synchronizer.h
app/src/main/cpp/video_player/texture_uploader/: gpu_texture_frame_uploader.cpp  texture_frame_uploader.cpp  texture_frame_uploader.h  yuv_texture_frame_uploader.cpp
app/src/main/java/com/zx/androidffmpegplayer/: ChangbaPlayerActivity.java  MainActivity.java  PermissionUtils.java
app/src/main/java/com/zx/androidffmpegplayer/video/decoder/: MediaCodecDecoder.java  MediaCodecDecoderLifeCycle.java
app/src/main/java/com/zx/androidffmpegplayer/video/player/: KTVPlayer.java  OnInitializedCallback.java  OnStoppedCallback.java
app/src/main/jni/: KTVPlayer.cpp  com_zx_androidffmpegplayer_video_player_KTVPlayer.h  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zx/androidffmpegplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
